# Bot-Authentication

./: .gitignore  README.md  pyproject.toml  test.py
.github/workflows/: pr.yaml  publish.yaml
examples/crawl4ai-hook/: README.md  main.py  pyproject.toml
examples/scrapy/: main.py  pyproject.toml
examples/scrapy-spider/: README.md  main.py  pyproject.toml  test_import.py
examples/scrapy-spider/scrapy_spider/: __init__.py
examples/scrapy-spider/src/: __init__.py
examples/scrapy-spider/src/scrapy_spider/: __init__.py
src/: BotAuth.py
src/bot_auth/: __init__.py
src/web_bot_auth/: __init__.py
