[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Bot-Authentication"
version = "0.1.0"
description = "A library to check for AI Bot Authentication using the latest HTTP header Signature."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name="Atish Joottun", email="atish.joottun@cyberstorm.mu" }
]
dependencies = [

]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/yourname/your-library"
Repository = "https://github.com/yourname/your-library"
Issues = "https://github.com/yourname/your-library/issues"