[project]
name = "bot-auth"
version = "0.3.2"
description = "A library to check for AI Bot Authentication using the latest HTTP header Signature."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name="Atish Joottun", email="atish.joottun@cyberstorm.mu" },
    { name="Thibault Meunier", email="mail@thibaultmeunier.com" },
    { name="Antonin Vlcek", email="tony@vlcek.dev" },
]
dependencies = [
    "cryptography>=45.0.0",
    "http-message-signatures>=0.7.0",
    "requests>=2.25.0",
]
[project.urls]
homepage = "https://github.com/cyberstormdotmu/Bot-Authentication"
source = "https://github.com/cyberstormdotmu/Bot-Authentication.git"
issues = "https://github.com/cyberstormdotmu/Bot-Authentication/issues"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "examples/*",
]

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "C90"]

[tool.black]
line-length = 88

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.12.4",
]
