[project]
name = "scrapy-spider"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scrapy>=2.13.3",
    "web-bot-auth",
    "wheel",
]

[tool.uv.sources]
web-bot-auth = { workspace = true }

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"